--- a/tests/demo.ipynb
+++ b/tests/demo.ipynb
@@ -155,6 +155,7 @@
         "generator = AnswerAware('meta-llama/Meta-Llama-3.1-70B-Instruct-Turbo',\n",
         "                        api_key, base_url, num_of_hints=5, enable_tqdm=True)\n",
         "generator.generate(dataset['entire'].get_instances())"
+        "pass"
       ],
       "metadata": {
         "id": "z1R9BYRIBd9g"
