--- a/tests/demo.ipynb
+++ b/tests/demo.ipynb
@@ -154,7 +154,7 @@
         "\n",
         "generator = AnswerAware('meta-llama/Meta-Llama-3.1-70B-Instruct-Turbo',\n",
         "                        api_key, base_url, num_of_hints=5, enable_tqdm=True)\n",
-        "generator.generate(dataset['entire'].get_instances())",
+        "generator.generate(dataset['entire'].get_instances())\n",
         "pass"
       ],
       "metadata": {
