--- a/tests/demo.ipynb
+++ b/tests/demo.ipynb
@@ -407,6 +407,37 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## Viewing the Evaluation Metrics\n",
+        "\n",
+        "Finally, let's view the metrics evaluated for the second hint of third question in the dataset."
+      ],
+      "metadata": {
+        "id": "hr_GFPfvFhU2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "third_question = dataset['entire'].get_instance('id_3')\n",
+        "second_hint = third_question.hints[1]\n",
+        "\n",
+        "print(f'Question: {third_question.question.question}')\n",
+        "print(f'Answer: {third_question.answers[0].answer}')\n",
+        "print(f'Second Hint: {second_hint.hint}')\n",
+        "print()\n",
+        "\n",
+        "for metric in second_hint.metrics:\n",
+        "    print(f'{metric}: {second_hint.metrics[metric].value}')"
+      ],
+      "metadata": {
+        "id": "FhT9KaS8Ekuw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## Exporting the Results\n",
         "\n",
         "If you want to further analyze the results, you can export the evaluated dataset to a JSON file, including the scores."
