--- a/tests/demo.ipynb
+++ b/tests/demo.ipynb
@@ -37,7 +37,7 @@
       "source": [
         "from IPython.display import clear_output\n",
         "\n",
-        "!pip install torch==2.4.0 torchvision==0.19.0 torchaudio==2.4.0",
+        "!pip install torch==2.4.0 torchvision==0.19.0 torchaudio==2.4.0\n",
         "!pip install hinteval\n",
         "!pip install httpx==0.27.2\n",
         "clear_output()"
