--- a/tests/demo.ipynb
+++ b/tests/demo.ipynb
@@ -59,7 +59,7 @@
       "source": [
         "# @title Pipeline Argument\n",
         "\n",
-        "api_key = '' # @param {type:\"string\"}\n",
+        "api_key = 'tgp_v1_b_1WlsKp-UJ88kON4me7qfxKqzqC-QNt2qcmp24VfgI' # @param {type:\"string\"}\n",
         "base_url = 'https://api.together.xyz/v1' # @param {type:\"string\"}"
       ],
       "metadata": {
