--- a/tests/demo.ipynb
+++ b/tests/demo.ipynb
@@ -45,6 +45,21 @@
     {
       "cell_type": "markdown",
       "source": [
+        "⚠️ **Important:**\n",
+        "After installing the dependencies above, you need to **restart the session** in Google Colab.\n",
+        "\n",
+        "Go to the menu:\n",
+        "`Runtime` → `Restart session`\n",
+        "\n",
+        "After restarting, re-run the cells below to continue."
+      ],
+      "metadata": {
+        "id": "Kbs6-BJ5AwwQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Generate a Synthetic Hint Dataset\n",
         "\n",
         "This tutorial provides step-by-step guidance on how to generate a synthetic hint dataset using large language models via the TogetherAI platform. To proceed, make sure you have an active API key for TogetherAI.\n"
@@ -58,7 +73,7 @@
       "source": [
         "# @title Pipeline Argument\n",
         "\n",
-        "api_key = 'tgp_v1_b_1WlsKp-UJ88kON4me7qfxKqzqC-QNt2qcmp24VfgI' # @param {type:\"string\"}\n",
+        "api_key = '' # @param {type:\"string\"}\n",
         "base_url = 'https://api.together.xyz/v1' # @param {type:\"string\"}"
       ],
       "metadata": {
