--- a/tests/demo.ipynb
+++ b/tests/demo.ipynb
@@ -4,7 +4,10 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "runtime_attributes": {
+        "runtime_version": "2025.07"
+      }
     },
     "kernelspec": {
       "name": "python3",
@@ -35,11 +38,19 @@
       },
       "outputs": [],
       "source": [
+        "import os\n",
+        "import sys\n",
         "from IPython.display import clear_output\n",
         "\n",
         "!pip install torch==2.4.0 torchvision==0.19.0 torchaudio==2.4.0\n",
         "!pip install hinteval\n",
-        "clear_output()"
+        "clear_output()\n",
+        "\n",
+        "flag_file = \"./restarted\"\n",
+        "if not os.path.exists(flag_file):\n",
+        "    with open(flag_file, \"w\") as f:\n",
+        "        f.write(\"done\")\n",
+        "    os.kill(os.getpid(), 9)"
       ]
     },
     {
@@ -73,7 +84,7 @@
       "source": [
         "# @title Pipeline Argument\n",
         "\n",
-        "api_key = '' # @param {type:\"string\"}\n",
+        "api_key = 'tgp_v1_Jl24Z_WK_TFWYeUsArwmSpxAemSeV28SzAbjwEKxGCw' # @param {type:\"string\"}\n",
         "base_url = 'https://api.together.xyz/v1' # @param {type:\"string\"}"
       ],
       "metadata": {
