--- a/tests/demo.ipynb
+++ b/tests/demo.ipynb
@@ -42,7 +42,7 @@
         "import sys\n",
         "from IPython.display import clear_output\n",
         "\n",
-        "!pip install torch==2.4.0 torchvision==0.19.0 torchaudio==2.4.0\n",
+        "!pip install torch==2.4.0 torchvision==0.19.0 torchaudio==2.4.0 --index-url https://download.pytorch.org/whl/cu124\n",
         "!pip install hinteval\n",
         "clear_output()\n",
         "\n",
