--- a/tests/demo.ipynb
+++ b/tests/demo.ipynb
@@ -31,6 +31,17 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "ℹ️ **Attention:**\n",
+        "Please note that due to Google Colab’s restrictions on creating new environments, installing HintEval may take around **10 minutes**. Thank you for your patience.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "W6UQ0gpKmYMx"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
